// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleBadge CircleBadge.Icon renders consistently 1`] = `
.c0 {
  max-width: 60% !important;
  height: auto !important;
  max-height: 55% !important;
}

<svg
  aria-hidden="true"
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M13.78 4.22C13.9204 4.36062 13.9993 4.55125 13.9993 4.75C13.9993 4.94875 13.9204 5.13937 13.78 5.28L6.53 12.53C6.38937 12.6704 6.19875 12.7493 6 12.7493C5.80125 12.7493 5.61062 12.6704 5.47 12.53L2.22 9.28C2.08752 9.13782 2.0154 8.94978 2.01882 8.75547C2.02225 8.56117 2.10096 8.37579 2.23838 8.23837C2.37579 8.10096 2.56118 8.02225 2.75548 8.01882C2.94978 8.01539 3.13782 8.08752 3.28 8.22L6 10.94L12.72 4.22C12.8606 4.07955 13.0512 4.00066 13.25 4.00066C13.4487 4.00066 13.6394 4.07955 13.78 4.22Z\\"></path>",
    }
  }
  fill="currentColor"
  height={16}
  role="img"
  style={
    Object {
      "display": "inline-block",
      "userSelect": "none",
      "verticalAlign": "text-bottom",
    }
  }
  viewBox="0 0 16 16"
  width={16}
/>
`;

exports[`CircleBadge renders consistently 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 96px;
  height: 96px;
}

<div
  className="c0"
>
  <img
    alt=""
    src="primer.jpg"
  />
</div>
`;

exports[`CircleBadge respects the inline prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 96px;
  height: 96px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge respects the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 128px;
  height: 128px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge uses the size prop to override the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 20px;
  height: 20px;
}

<div
  className="c0"
  size={20}
/>
`;
